# x-market-analysis

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/home-server/: .env.example  README.md  docker-compose.yml
documentation/: architecture.md  commands.md  home-server.md  plan.md  strategy-methodology.md
migrations/: 001_initial_schema.sql  002_enrichment_metadata.sql  003_backtest_indexes.sql  004_fundamentals.sql
src/findb/: __init__.py  cli.py  config.py
src/findb/core/: cli_utils.py  paths.py
src/findb/core/db/: connection.py  migrations.py
src/findb/core/llm/: __init__.py  anthropic_json.py  anthropic_provider.py  base.py  json_utils.py  ollama_provider.py  router.py
src/findb/core/marketdata/: fundamentals.py  prices.py  schwab_client.py
src/findb/features/xsentiment/: backtest.py  cli.py  posts.py  reports.py  sentiment.py  tickers.py  x_client.py
src/xmarket/: __init__.py  cli.py  config.py
src/xmarket/analysis/: backtest.py  signals.py
src/xmarket/db/: connection.py  migrations.py
src/xmarket/enrich/: anthropic_json.py  reports.py  sentiment.py  tickers.py
src/xmarket/ingest/: posts.py  prices.py  x_client.py
tests/: test_backtest.py  test_config.py  test_enrichment_helpers.py  test_fundamentals.py  test_llm_router.py
