[project]
name = "x-market-analysis"
version = "0.1.0"
description = "Find winning trading strategies by correlating X (Twitter) chatter with stock price performance."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "psycopg[binary]>=3.2",        # PostgreSQL driver
    "pydantic>=2.7",
    "pydantic-settings>=2.3",      # typed config from .env
    "httpx>=0.27",                 # async HTTP for the X API
    "schwab-py>=1.5",              # Charles Schwab Trader API client (OAuth + market data)
    "anthropic>=0.40",             # Claude Haiku sentiment
    "typer>=0.12",                 # CLI framework (`findb ...`)
    "tenacity>=8.4",               # retries for flaky network calls
    "rich>=15.0.0",
]

[project.scripts]
findb = "findb.cli:app"
xmarket = "findb.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/findb"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = import sorting, UP = pyupgrade, B = bugbear
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true   # third-party libs without type stubs (yfinance etc.)

[tool.pytest.ini_options]
testpaths = ["tests"]
